--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "^6.18.0",
+    "@prisma/extension-accelerate": "^2.0.2",
+    "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.8",
     "echarts": "^6.0.0",
+    "express-rate-limit": "^8.2.1",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-bootstrap": "^2.10.10",
@@ -18,9 +22,11 @@
     "react-dom": "19.2.0",
     "react-flatpickr": "^4.0.11",
     "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
     "sass": "^1.93.2",
     "simplebar-react": "^3.3.2",
-    "usehooks-ts": "^3.1.1"
+    "usehooks-ts": "^3.1.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/node": "^20",
