--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/extension-accelerate": "^2.0.2",
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.8",
+    "cloudinary": "^2.8.0",
     "echarts": "^6.0.0",
     "express-rate-limit": "^8.2.1",
     "next": "16.0.1",
@@ -26,6 +27,7 @@
     "sass": "^1.93.2",
     "simplebar-react": "^3.3.2",
     "usehooks-ts": "^3.1.1",
+    "yet-another-react-lightbox": "^3.25.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
