--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.18.0",
     "@prisma/extension-accelerate": "^2.0.2",
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.8",
     "cloudinary": "^2.8.0",
+    "compressorjs": "^1.2.1",
     "echarts": "^6.0.0",
     "express-rate-limit": "^8.2.1",
+    "heic2any": "^0.0.4",
     "next": "16.0.1",
+    "next-auth": "^5.0.0-beta.30",
     "react": "19.2.0",
     "react-bootstrap": "^2.10.10",
     "react-countup": "^6.5.3",
